htcondor_eda/scripts/field_analysis_scripts/vo_to_ownergroup_mapping_58782.err
  File "/home/master/wzheng/projects/htcondor_eda/scripts/field_analysis_scripts/check_vo_to_ownergroup_mapping.py", line 45
    print("\n All VOs map uniquely to one OwnerGroup �� mapping is valid for supplementation.")
                                                                                          ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa1 in position 0: invalid start byte
